edit category jekyll

--- a/_posts/2019-03-08-jekyll-CP949.md
+++ b/_posts/2019-03-08-jekyll-CP949.md
@@ -7,7 +7,7 @@ comments: null
 share: true
 related: true
 date: '2019-03-22 5:26:28 +0900'
-categories: Jekyll
+categories: Git
 ---
 
 > ## CP949 Error
