--- a/_posts/2019-12-31-JSP-env-1.md
+++ b/_posts/2019-12-31-JSP-env-1.md
@@ -24,11 +24,11 @@ categories: JSP
 
 * ##### jdk 설치 폴더를 JAVA_HOME 환경변수로 추가
 
-	![java home](/assets/img/jsp/java_home.png)
+	![java_home](/assets/img/jsp/java_home.png)
 	
 * ##### tomcat 설치 폴더를 CATALINA_HOME 환경변수로 추가
 
-	![catalina home](/assets/img/jsp/catalina_home.png)
+	![catalina_home](/assets/img/jsp/catalina_home.png)
 	
 * ##### 시스템 변수 -> Path에 추가
 	* ######  %JAVA_HOME%\bin
@@ -43,7 +43,7 @@ categories: JSP
 
 * ##### Tomcat 기본 화면이 나타남
 
-	![tomcat index](/assets/img/jsp/tomcat_default_index.png)
+	![tomcat_index](/assets/img/jsp/tomcat_default_index.png)
 
 	
 
