add tomcat-servlet and Google Search html

--- a/_posts/2019-12-31-JSP-env-2.md
+++ b/_posts/2019-12-31-JSP-env-2.md
@@ -18,7 +18,7 @@ categories: JSP
 ### 2 프로젝트 생성
 * ##### Create New Project
 
- ![itj_create1](/assets/img/jsp/itj_create1.png)
+ ![](/assets/img/jsp/itj_create1.png)
  
 * ##### Project 설정
 	* ###### 	Java SDK 버전 설정
@@ -26,7 +26,7 @@ categories: JSP
 	* ###### 	Version -> Apache Axis 선택
 	* ######  Next -> 프로젝트 이름 입력 -> Finish
 
- ![itj_create2](/assets/img/jsp/itj_create2.png)
+ ![](/assets/img/jsp/itj_create2.png)
 	
 ### 2 Tomcat 연동
 	
@@ -36,23 +36,23 @@ categories: JSP
 	* ###### Tomcat Server -> Local 선택
 	* ###### Tomcat Server가 안보이면 more items... 클릭하면 아래쪽에 있음
 	
- ![itj_create3](/assets/img/jsp/itj_create3.png)
+ ![](/assets/img/jsp/itj_create3.png)
 
 * ##### Tomcat 설정
 	* ###### Configure... 클릭 -> Tomcat 설치 폴더로 설정 
 	* ###### URL이나 HTTP port로 port번호 변경 가능(db port 번호와 겹치기 때문에 변경)
 	* ###### fix 클릭
 
- ![itj_create4](/assets/img/jsp/itj_create4.png)
+ ![](/assets/img/jsp/itj_create4.png)
 
 * ###### Application context -> / 로 수정 -> OK
 	
- ![itj_create5](/assets/img/jsp/itj_create5.png)
+ ![](/assets/img/jsp/itj_create5.png)
 
 ### 3 Tomcat 실행
 * ##### 오른쪽 위에 Run or Shift + F10 으로 실행
 
- ![itj_create6](/assets/img/jsp/itj_create6.png)
+ ![](/assets/img/jsp/itj_create6.png)
 	
 * ###### [아파치 톰캣 설정 및 JSP 실행 방법]
 
