--- a/_posts/jsp/2019-12-31-env_2.md
+++ b/_posts/jsp/2019-12-31-env_2.md
@@ -1,5 +1,5 @@
 ---
-title: JSP - 환경 구축 (2)
+title: JSP/IntelliJ - 환경 구축 (2)
 layout: single
 author_profile: true
 read_time: true
@@ -28,7 +28,7 @@ categories: JSP
 
  ![](/assets/img/jsp/itj_create2.png)
 	
-### 2 Tomcat 연동
+### 2 Tomcat - IntelliJ 연동
 	
 * ##### Tomcat 추가
 	* ###### 오른쪽 위에 Add Configurations 클릭
@@ -49,7 +49,7 @@ categories: JSP
 	
  ![](/assets/img/jsp/itj_create5.png)
 
-### 3 Tomcat 실행
+### 3 IntelliJ에서 Tomcat 실행
 * ##### 오른쪽 위에 Run or Shift + F10 으로 실행
 
  ![](/assets/img/jsp/itj_create6.png)
