edit the title of the env'

--- a/_posts/jsp/2019-12-31-env_1.md
+++ b/_posts/jsp/2019-12-31-env_1.md
@@ -1,5 +1,5 @@
 ---
-title: JSP/IntelliJ - 환경 구축 (1)
+title: JSP/IntelliJ - 환경 구축 (1) 설치 및 환경변수 설정
 layout: single
 author_profile: true
 read_time: true
@@ -10,7 +10,7 @@ date: '2019-12-31 17:27:28 +0900'
 categories: JSP
 ---
 
-> ## JDK, Tomcat 설치
+> ## JDK, Tomcat 설치 및 환경변수 설정
 
 ### 1 JDK 설치
 * #####  [Java SE Downloads](https://www.oracle.com/technetwork/java/javase/downloads/index.html) jdk 설치
