--- a/_posts/jsp/2019-12-31-env_2.md
+++ b/_posts/jsp/2019-12-31-env_2.md
@@ -1,5 +1,5 @@
 ---
-title: JSP/IntelliJ - 환경 구축 (2)
+title: JSP/IntelliJ - 환경 구축 (2) 프로젝트 생성 및 Tomcat 연동
 layout: single
 author_profile: true
 read_time: true
@@ -10,7 +10,7 @@ date: '2019-12-31 17:28:28 +0900'
 categories: JSP
 ---
 
-> ## Intellij - Tomcat 연동 및 프로젝트 생성
+> ## Intellij 프로젝트 생성 및 Tomcat 연동
 
 ### 1 Intellij Ultimate 설치
 * #####  [다운로드 IntelliJ IDEA](https://www.jetbrains.com/ko-kr/idea/download/#section=windows) Intellij Ultimate 설치
@@ -29,25 +29,26 @@ categories: JSP
  ![](/assets/img/jsp/itj_create2.png)
 	
 ### 2 Tomcat - IntelliJ 연동
-	
-* ##### Tomcat 추가
-	* ###### 오른쪽 위에 Add Configurations 클릭
-	* ######  Add New Configuration (+) 클릭
-	* ###### Tomcat Server -> Local 선택
-	* ###### Tomcat Server가 안보이면 more items... 클릭하면 아래쪽에 있음
-	
- ![](/assets/img/jsp/itj_create3.png)
-
-* ##### Tomcat 설정
-	* ###### Configure... 클릭 -> Tomcat 설치 폴더로 설정 
-	* ###### URL이나 HTTP port로 port번호 변경 가능(db port 번호와 겹치기 때문에 변경)
-	* ###### fix 클릭
-
- ![](/assets/img/jsp/itj_create4.png)
-
-* ###### Application context -> / 로 수정 -> OK
-	
- ![](/assets/img/jsp/itj_create5.png)
+* #### Tomcat 연동	
+	* ##### Tomcat 추가
+		* ###### 오른쪽 위에 Add Configurations 클릭
+		* ######  Add New Configuration (+) 클릭
+		* ###### Tomcat Server -> Local 선택
+		* ###### Tomcat Server가 안보이면 more items... 클릭하면 아래쪽에 있음
+![](/assets/img/jsp/itj_create3.png)
+	* ##### Tomcat 설정
+		* ###### Configure... 클릭 -> Tomcat 설치 폴더로 설정 
+		* ###### URL이나 HTTP port로 port번호 변경 가능(db port 번호와 겹치기 때문에 변경)
+		* ###### fix 클릭
+![](/assets/img/jsp/itj_create4.png)
+		* ##### Application context -> / 로 수정 -> OK
+![](/assets/img/jsp/itj_create5.png)
+* #### Tomcat JSP Library 추가
+	* ##### Shift + Ctrl + Alt + S -> Libraries -> 위쪽에 + 버튼 -> From Maven... 선택
+![](/assets/img/jsp/itj_create7.png)
+	* ##### tomcat:jsp 로 검색하고 대기
+	* ##### 검색 목록중에서 tomcat:jsp-api:X.X.X에서 가장 최신버전 선택 -> OK
+![](/assets/img/jsp/itj_create8.png)
 
 ### 3 IntelliJ에서 Tomcat 실행
 * ##### 오른쪽 위에 Run or Shift + F10 으로 실행
