--- a/_posts/jsp/2020-01-06-request.md
+++ b/_posts/jsp/2020-01-06-request.md
@@ -12,151 +12,62 @@ categories: JSP
 
 > ## Request 기본 객체와 URL
 
-* ### Project - InitParam
-	* ##### ServletInitParam.java
-	
-		```java
-		import javax.servlet.ServletException;
-		import javax.servlet.annotation.WebInitParam;
-		import javax.servlet.annotation.WebServlet;
-		import javax.servlet.http.HttpServlet;
-		import javax.servlet.http.HttpServletRequest;
-		import javax.servlet.http.HttpServletResponse;
-		import java.io.IOException;
-		import java.io.PrintWriter;
+* ### Project - RequestForm
+	* ##### requestform.html
+			<!DOCTYPE html>
+			<html lang="en">
+			<head>
+					<meta charset="UTF-8">
+					<title>Title</title>
+			</head>
+			<body>
+			<form action="requestform.jsp">
+					<label>이름 : <input type="text" name="name"></label><br/>
+					<label>사는 곳 : <input type="text" name="place"></label>
+					<input type="submit" value="Get Request Form">
+			</form>
+			</body>
+			</html>
+	* ##### requestform.jsp
+			<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+			<html>
+			<head>
+					<title>Request Form</title>
+			</head>
+			<body>
+			1. 클라이언트 IP 주소 <%= request.getRemoteAddr()%><br/>
+			2. 요청 매서드: <%= request.getMethod()%><br/>
+			3. 프로토콜: <%= request.getProtocol()%><br/>
+			4. 서버 호스트 이름: <%= request.getServerName()%><br/>
+			5. 서버 포트: <%= request.getServerPort()%><br/>
+			6. 요청 URI: <%= request.getRequestURI()%><br/>
+			7. 요청 URL: <%= request.getRequestURL()%><br/>
+			8. 요청 URL중 쿼리 스트링: <%= request.getQueryString()%><br/>
+			9. 컨텍스트 패스 정보: <%= request.getContextPath()%><br/>
+			10. Referer: <%= request.getHeaders("referer")%>
+			</body>
+			</html>
 
-		public class ServletInitParam extends HttpServlet {
-				protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {}
 
-				protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-						response.setContentType("text/html; charset=utf-8");
-
-						String id = getInitParameter("id");
-						String pw = getInitParameter("pw");
-						String desc = getInitParameter("desc");
-
-						PrintWriter out = response.getWriter();
-						out.println("<title>form result</title>" +
-										"당신이 입력한 정보입니다.<br>" +
-										"<b>ID</b> : " + id + "<br>" +
-										"<b>Password</b> : " + pw + "<br>" +
-										"<b>자기소개</b><br>" +
-										desc);
-				}
-		}
-		```
-	
-	* ##### web.xml
-	
-			<?xml version="1.0" encoding="UTF-8"?>
-			<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-							 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-							 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-							 version="4.0">
-							 
-				...
-				
-				<servlet>
-						<servlet-name>InitParam</servlet-name>
-						<servlet-class>example.ServletInitParam</servlet-class>
-				</servlet>
-				<servlet-mapping>
-						<servlet-name>InitParam</servlet-name>
-						<url-pattern>/initParam</url-pattern>
-				</servlet-mapping>
-				
-				...
-				
-			</web-app>
-
-* ### 특정 Servlet의 Parameter 초기화
-	* #### web.xml 사용
-		* ##### web.xml에 매핑한 Servlet 태그 안에서 파라미터 초기화
-				<servlet>
-						<servlet-name>InitParam</servlet-name>
-						<servlet-class>example.ServletInitParam</servlet-class>
-
-						<!--추가-->
-						<init-param>
-								<param-name>id</param-name>
-								<param-value>qwer</param-value>
-						</init-param>
-						<init-param>
-								<param-name>pw</param-name>
-								<param-value>1234</param-value>
-						</init-param>
-						<init-param>
-								<param-name>desc</param-name>
-								<param-value>Hello</param-value>
-						</init-param>
-
-				</servlet>
-				<servlet-mapping>
-						<servlet-name>InitParam</servlet-name>
-						<url-pattern>/initParam</url-pattern>
-				</servlet-mapping>
+* ### Request - URL
+	* #### form 태그를 이용해 requestform.jsp 페이지를 를 요청한다
+		![](/assets/img/jsp/request_url1.png)
 			
-		* ##### 매핑된 URL로 접근하면 초기화 시켜놓은 파라미터가 출력된 것을 볼 수 있다
-
-			![](/assets/img/jsp/servlet_param1.png)
- 
-	* #### Annotation 사용
-		* ##### ServletInitParam.java의 클래스 위에 아래의 어노태이션을 추가
-	
-			```
-			@WebServlet(name = "ServletInitParam", urlPatterns = {"/initParam"},
-					initParams = {@WebInitParam(name = "id", value = "qwer"), @WebInitParam(name = "pw", value = "1234"),
-									@WebInitParam(name = "desc", value = "Hello")})
-			```
-									
-		* ##### 마찬가지로 초기화 시켜놓은 파라미터가 출력된 것을 볼 수 있다
-
-			![](/assets/img/jsp/servlet_param1.png)
-		
-		
-* ### Servlet Context을 사용해 모든 Servlet에 파라미터 공유
-	* #### web.xml에 Context Param을 초기화
-		* ##### web.xml에 아래의 코드 추가
-				<context-param>
-						<param-name>id</param-name>
-						<param-value>qwer</param-value>
-				</context-param>
-				<context-param>
-						<param-name>pw</param-name>
-						<param-value>asdf</param-value>
-				</context-param>
-		* ##### ServletContextParam.java
-			```java
-			import javax.servlet.ServletException;
-			import javax.servlet.annotation.WebServlet;
-			import javax.servlet.http.HttpServlet;
-			import javax.servlet.http.HttpServletRequest;
-			import javax.servlet.http.HttpServletResponse;
-			import java.io.IOException;
-			import java.io.PrintWriter;
-
-			@WebServlet(urlPatterns = {"/contextParam"})
-			public class ServletContextParam extends HttpServlet {
-					protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException { }
-
-					protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-							response.setContentType("text/html;charset=utf-8");
-							String id = getServletContext().getInitParameter("id");
-							String pw = getServletContext().getInitParameter("pw");
-
-							PrintWriter out = response.getWriter();
-							out.println("<title>form result</title>" +
-											"당신이 입력한 정보입니다.<br>" +
-											"<b>ID</b> : " + id + "<br>" +
-											"<b>Password</b> : " + pw );
-					}
-			}
-			```
-		 
-	 * ##### 결과 화면. ServletContextParam 뿐 아니라 다른 Servlet에서도 파라미터가 공유된다
-		 
-		![](/assets/img/jsp/servlet_param2.png)		 
-* ###### [신입SW인력을 위한 실전 JSP Servlet]
+	* #### Request의 요청 정보를 출력한다
+		![](/assets/img/jsp/request_url2.png)
+				
+	* #### http://localhost:8080/requestform.jsp?name=K&place=Korea
+				
+		* ##### (1) http: - request.getProtocol() : 프로토콜 이름과 버전 정보가 함께 리턴된다.
+		* ##### (2) localhost - request.getServerName() : 호스트 서버의 이름이 리턴된다.
+		* ##### (3) 8080 - request.getServerPort() : 서버가 요쳥을 받아들인 포트 번호가 리턴된다.
+		* ##### (4) requestform.jsp -request.getRequestURI() : 호스트 서버 이름 및 포트 번호 뒷부분이 리턴된다. 이 중 쿼리스트링은 리턴되지 않는다.
+		* ##### http://localhost:8080/requestform.jsp - request.getRequestURL() : (1)~(4)번 모두 리턴한다.
+		* ##### ?name=K&place=Korea - request.getQueryString() : (1)~(4)번에 포함되지 않은 쿼리스트링만 리턴된다.
+		* ##### request.getContextPath() : (4)번에 포힘되어 있는 웹 애플리케이션 이름이 "/"와 함께 리턴된다. (Intellij 없이 Tomcat 서버로만 실행시 나오는것 확인)
+		* ##### request.getHeaders("referer") : 헤더 정보 중에 "referer"로 저장된 내용을 얻어온다. "referer"의 의미는 본 페이지 (requestform.jsp)를 보기 직전의 페이지 (requestform.html)을 의미하며 그 직전의 페이지가 현재의 페이지를 참조 (refer)하고 있다는 의미로 "referer"라는 단어를 사용한다.
 
 
-[신입SW인력을 위한 실전 JSP Servlet]: https://www.youtube.com/watch?v=2Pqi-kUMwtw&list=PLieE0qnqO2kTyzAlsvxzoulHVISvO8zA9&index=39
+* ###### [Servlet을 포함한 JSP 2.1 웹 프로그래밍 입문에서 완성까지 ]
+
+[Servlet을 포함한 JSP 2.1 웹 프로그래밍 입문에서 완성까지 ]: https://book.naver.com/bookdb/book_detail.nhn?bid=6468787
