--- a/_posts/jsp/2020-01-07-cookie.md
+++ b/_posts/jsp/2020-01-07-cookie.md
@@ -156,9 +156,8 @@ categories: JSP
 	* ##### 쿠키 리스트
 	![](/assets/img/jsp/cookie4.png)
 				
-* ###### [JSP - 특정페이지로 이동방법(forward/redirect)]
-* ###### [페이지 이동 방법, Foward, Redirect]
+				
+* ###### [신입SW인력을 위한 실전 JSP Servlet]
 
-
-[JSP - 특정페이지로 이동방법(forward/redirect)]: https://installed.tistory.com/entry/8-JSP-%ED%8A%B9%EC%A0%95%ED%8E%98%EC%9D%B4%EC%A7%80%EB%A1%9C-%EC%9D%B4%EB%8F%99%EB%B0%A9%EB%B2%95
-[페이지 이동 방법, Foward, Redirect]: https://m.blog.naver.com/PostView.nhn?blogId=tkddlf4209&logNo=220539737196&proxyReferer=https%3A%2F%2Fwww.google.com%2F
+				
+[신입SW인력을 위한 실전 JSP Servlet]: https://www.youtube.com/watch?v=V4tZpzeDIow&list=PLieE0qnqO2kTyzAlsvxzoulHVISvO8zA9&index=45
