--- a/_posts/jsp/2020-01-07-session.md
+++ b/_posts/jsp/2020-01-07-session.md
@@ -16,21 +16,23 @@ categories: JSP
 
 * ### Project - CookieLogin
 	* ##### s_home.jsp
-			<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-			<html>
-			<head>
-					<title>Home</title>
-			</head>
-			<body>
-			<%
-					if(session.getAttribute("id")==null)
-							pageContext.include("s_login.jsp");
-					else
-							pageContext.include("s_user_info.jsp");
-			%>
-			<input type="button" value="Get Cookie List" onclick="location.href='session_info.jsp'">
-			</body>
-			</html>
+		```jsp
+		<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+		<html>
+		<head>
+				<title>Home</title>
+		</head>
+		<body>
+		<%
+				if(session.getAttribute("id")==null)
+						pageContext.include("s_login.jsp");
+				else
+						pageContext.include("s_user_info.jsp");
+		%>
+		<input type="button" value="Get Cookie List" onclick="location.href='session_info.jsp'">
+		</body>
+		</html>
+		```
 	
 	* ##### s_login.jsp
 			<%@ page contentType="text/html;charset=UTF-8" language="java" %>
