--- a/_posts/jsp/2020-01-06-request.md
+++ b/_posts/jsp/2020-01-06-request.md
@@ -14,39 +14,45 @@ categories: JSP
 
 * ### Project - RequestForm
 	* ##### requestform.html
-			<!DOCTYPE html>
-			<html lang="en">
-			<head>
-					<meta charset="UTF-8">
-					<title>Title</title>
-			</head>
-			<body>
-			<form action="requestform.jsp">
-					<label>이름 : <input type="text" name="name"></label><br/>
-					<label>사는 곳 : <input type="text" name="place"></label>
-					<input type="submit" value="Get Request Form">
-			</form>
-			</body>
-			</html>
+		```html
+		<!DOCTYPE html>
+		<html lang="en">
+		<head>
+				<meta charset="UTF-8">
+				<title>Title</title>
+		</head>
+		<body>
+		<form action="requestform.jsp">
+				<label>이름 : <input type="text" name="name"></label><br/>
+				<label>사는 곳 : <input type="text" name="place"></label>
+				<input type="submit" value="Get Request Form">
+		</form>
+		</body>
+		</html>
+		```
+		
 	* ##### requestform.jsp
-			<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-			<html>
-			<head>
-					<title>Request Form</title>
-			</head>
-			<body>
-			1. 클라이언트 IP 주소 <%= request.getRemoteAddr()%><br/>
-			2. 요청 매서드: <%= request.getMethod()%><br/>
-			3. 프로토콜: <%= request.getProtocol()%><br/>
-			4. 서버 호스트 이름: <%= request.getServerName()%><br/>
-			5. 서버 포트: <%= request.getServerPort()%><br/>
-			6. 요청 URI: <%= request.getRequestURI()%><br/>
-			7. 요청 URL: <%= request.getRequestURL()%><br/>
-			8. 요청 URL중 쿼리 스트링: <%= request.getQueryString()%><br/>
-			9. 컨텍스트 패스 정보: <%= request.getContextPath()%><br/>
-			10. Referer: <%= request.getHeaders("referer")%>
-			</body>
-			</html>
+		```jsp
+		
+		<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+		<html>
+		<head>
+				<title>Request Form</title>
+		</head>
+		<body>
+		1. 클라이언트 IP 주소 <%= request.getRemoteAddr()%><br/>
+		2. 요청 매서드: <%= request.getMethod()%><br/>
+		3. 프로토콜: <%= request.getProtocol()%><br/>
+		4. 서버 호스트 이름: <%= request.getServerName()%><br/>
+		5. 서버 포트: <%= request.getServerPort()%><br/>
+		6. 요청 URI: <%= request.getRequestURI()%><br/>
+		7. 요청 URL: <%= request.getRequestURL()%><br/>
+		8. 요청 URL중 쿼리 스트링: <%= request.getQueryString()%><br/>
+		9. 컨텍스트 패스 정보: <%= request.getContextPath()%><br/>
+		10. Referer: <%= request.getHeaders("referer")%>
+		</body>
+		</html>
+		```
 
 
 * ### Request - URL
