--- a/_posts/jsp/2020-01-13-el.md
+++ b/_posts/jsp/2020-01-13-el.md
@@ -10,7 +10,7 @@ date: '2020-1-13 15:27:28 +0900'
 categories: JSP
 ---
 
-> ## > EL (Expression Language)
+> ## EL (Expression Language)
 
 
 * ### Expression Language
