--- a/_posts/spring/2020-02-11-aop.md
+++ b/_posts/spring/2020-02-11-aop.md
@@ -178,7 +178,7 @@ categories: Spring
 				}
 		}		
 		```	
-		</details>
+		</details><br/>
 		
 		```java
 		UserServiceImpl userService = new UserServiceImpl();
@@ -271,32 +271,310 @@ categories: Spring
 ##### 프록시 팩토리 빈 방식은 앞서 데코레이터 패턴의 두 가지 문제를 해결해준다. 첫 번째 문제인 타깃 인터페이스를 구현할 때 마다 클래스를 일일이 만드는 번거로움을 다이내믹 프록시를 이용하면 해결 된다. 두 번째로 같은 부가기능을 가진 메소드가 증가할때 중복된 부가기능 코드가 추가되는 문제점은 핸들러 메소드를 구현해 수많은 메소드에 부가기능을 부여해줄 수 있으니 부가기능 코드의 중복 문제도 사라진다.
 ##### 또한, 다이내믹 프록시에 팩토리 빈을 이용한 DI까지 사용할 수 있게되므로 번거로운 생성 코드도 제거할 수 있고, DI 설정만으로 다양한 타깃 오브젝트에 적용도 가능하다.
 ##### 지금까지는 메소드 단위로 하나의 클래스 안에 존재하는 여러 개의 메소드에 부가기능을 한 번에 제공하는 방식이었다. 하지만 클래스 단위로 여러개의 클래스에 공통적인 부가기능을 제공하거나, 하나의 타깃에 여러 개의 부가기능을 적용하려고 하면 여러가지 문제들이 발생한다.
-	* ### P
+	* ### ProxyFactoryBean
 		<details markdown="1">
-		<summary><font size="4px" ></font></summary>
+		<summary><font size="4px" >TransactionAdvice.java</font></summary>
 		```java
+		public class TransactionAdvice implements MethodInterceptor {
+				private PlatformTransactionManager transactionManager;
+
+				public void setTransactionManager(PlatformTransactionManager transactionManager) {
+						this.transactionManager = transactionManager;
+				}
+
+				@Override
+				public Object invoke(MethodInvocation methodInvocation) throws Throwable {
+						TransactionStatus status = this.transactionManager.getTransaction(new DefaultTransactionDefinition());
+
+						try {
+								Object ret = methodInvocation.proceed();
+								this.transactionManager.commit(status);
+								return ret;
+						} catch (RuntimeException e) {
+								this.transactionManager.rollback(status);
+								throw e;
+						}
+				}
+		}		
 		```	
 		</details>
 		
 		<details markdown="1">
-		<summary><font size="4px" ></font></summary>
+		<summary><font size="4px" >applicationContext.xml</font></summary>
 		```java
+		<?xml version="1.0" encoding="UTF-8"?>
+		<beans xmlns="http://www.springframework.org/schema/beans"
+					 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:util="http://www.springframework.org/schema/util"
+					 xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd http://www.springframework.org/schema/util https://www.springframework.org/schema/util/spring-util.xsd">
+				...
+				
+				<bean id="userService" class="org.springframework.aop.framework.ProxyFactoryBean">
+						<property name="target" ref="userServiceImpl"/>
+						<property name="interceptorNames">
+								<list>
+										<value>transactionAdvisor</value>
+								</list>
+						</property>
+				</bean>
+
+				<bean id="transactionAdvice" class="ex.spring.user.service.TransactionAdvice">
+						<property name="transactionManager" ref="transactionManager"/>
+				</bean>
+
+				<bean id="transactionPointcut" class="org.springframework.aop.support.NameMatchMethodPointcut">
+						<property name="mappedName" value="upgrade*"/>
+				</bean>
+
+				<bean id="transactionAdvisor" class="org.springframework.aop.support.DefaultPointcutAdvisor">
+						<property name="advice" ref="transactionAdvice"/>
+						<property name="pointcut" ref="transactionPointcut"/>
+				</bean>
+
+				...
+		</beans>		
 		```	
 		</details>
-		
+##### ProxyFactoryBean은 스프링의 DI와 템플릿/콜백 패턴, 서비스 추상화 등의 기법이 모두 적용된 것이다. 그렇기에 독립적이어서 여러 프록시가 공유할 수 있는 어드바이스와 포인트컷으로 확장 기능을 분리할 수 있다.
+##### ProxyFactoryBean까지 사용함으로 타깃 코드는 깔금한 상태에서 부가기능의 재활용이 가능하면서, 타깃의 적용 메소드를 선정하는 방식도 독립적으로 작성할 수 있도록 분리될 수있다. 하지만 부가기능이 적용될 타깃 오브젝트마다 거의 비슷한 내용의 ProxyFactoryBean 빈 설정정보를 추가해야 되는 문제는 여전히 남아있다. target 프로퍼티를 제외한 동일한 빈 클래스의 종류, 어드바이스, 포인트컷 설정을 매번 복사해서 붙여넣어줘야 한다.
+	* ### DefaultAdvisorAutoProxyCreator
 		<details markdown="1">
-		<summary><font size="4px" ></font></summary>
-		```java
+		<summary><font size="4px" >applicationContext.xml</font></summary>
+		```xml
+		<?xml version="1.0" encoding="UTF-8"?>
+		<beans xmlns="http://www.springframework.org/schema/beans"
+					 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+					 xsi:schemaLocation="http://www.springframework.org/schema/beans
+					 http://www.springframework.org/schema/beans/spring-beans.xsd">
+				...
+				
+				<bean class="org.springframework.aop.framework.autoproxy.DefaultAdvisorAutoProxyCreator"/>
+				
+				
+				<bean id="userService" class="ex.spring.user.service.UserServiceImpl">
+						<property name="mailSender" ref="mailSender"/>
+						<property name="userDao" ref="userDao"/>
+				</bean>
+				
+				<bean id="transactionAdvice" class="ex.spring.user.service.TransactionAdvice">
+						<property name="transactionManager" ref="transactionManager"/>
+				</bean>
+
+				<bean id="transactionPointcut" class="ex.spring.proxy.NameMatchClassMethodPointcut">
+						<property name="mappedClassName" value="*ServiceImpl"/>
+						<property name="mappedName" value="upgrade*"/>
+				</bean>
+				
+				<bean id="transactionAdvisor" class="org.springframework.aop.support.DefaultPointcutAdvisor">
+						<property name="advice" ref="transactionAdvice"/>
+						<property name="pointcut" ref="transactionPointcut"/>
+				</bean>
+
+				...
+		</beans>		
 		```	
 		</details>
-		
+##### DefaultAdvisorAutoProxyCreator는 BeanPostProcessor 인터페이스를 구현해서 만드는 스프링이 제공하는 빈 후처리기 중의 하나이다. 이 빈 후처리기 자체를 빈으로 등록만 하면 빈 오브젝트가 생성될 때 마다 빈 후처리기에 보내서 후처리 작업을 요청한다. 
+##### 빈 후처리기가 등록되어 있으면 스프링은 빈 오브젝트를 만들 때마다 후 처리기에게 빈을 보낸다. DefaultAdvisorAutoProxyCreator은 빈으로 등록된 모든 어드바이저 내의 포인트컷을 이용해 전달받은 빈이 프록시 적용 대상이면 프록시 생성기에게 현재 빈에 대한 프록시를 만들게 하고, 만들어진 프록시에 어드바이저를 연결해준다. 그 후 빈 후처리기가 원래의 빈 오브젝트 대신 프록시 오브젝트를 컨테이너에게 돌려주고 그 오브젝트가 빈으로 등록된다.
+##### transactionPointcut은 메소드 뿐만 아니라 클래스까지 필터를 적용시켰다.
+	* ### 포인트컷 표현식과 AOP 네임스페이스 적용
 		<details markdown="1">
-		<summary><font size="4px" ></font></summary>
-		```java
+		<summary><font size="4px" >applicationContext.xml</font></summary>
+		```xml
+		<?xml version="1.0" encoding="UTF-8"?>
+		<beans xmlns="http://www.springframework.org/schema/beans"
+					 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+					 xmlns:aop="http://www.springframework.org/schema/aop"
+					 xsi:schemaLocation="http://www.springframework.org/schema/beans
+					 http://www.springframework.org/schema/beans/spring-beans.xsd 
+					 http://www.springframework.org/schema/aop 
+					 https://www.springframework.org/schema/aop/spring-aop.xsd">
+				...
+				
+				<bean class="org.springframework.aop.framework.autoproxy.DefaultAdvisorAutoProxyCreator"/>
+				
+			
+				<bean id="userService" class="ex.spring.user.service.UserServiceImpl">
+						<property name="mailSender" ref="mailSender"/>
+						<property name="userDao" ref="userDao"/>
+				</bean>
+
+				<bean id="transactionAdvice" class="ex.spring.user.service.TransactionAdvice">
+						<property name="transactionManager" ref="transactionManager"/>
+				</bean>
+
+
+				<aop:config>
+						<aop:pointcut id="transactionPointcut" expression="execution(* *..*ServiceImpl.upgrade*(..))"/>
+						<aop:advisor advice-ref="transactionAdvice" pointcut-ref="transactionPointcut"/>
+				</aop:config>
+
+				<!-- 포인트컷을 내장한 어드바이저 태그-->
+				<!--    <aop:config>-->
+				<!--        <aop:advisor advice-ref="transactionAdvice" pointcut="execution(* *..*ServiceImpl.upgrade*(..))"/>-->
+				<!--    </aop:config>-->
+
+				...
+		</beans>		
 		```	
 		</details>
+##### 아래의 aop 네임스페이스 선언을 설정파일에 추가해줘야 한다.
+		```xml
+		<beans ...
+					 xmlns:aop="http://www.springframework.org/schema/aop" 
+					 xsi:schemaLocation= "... 
+									http://www.springframework.org/schema/aop 
+									https://www.springframework.org/schema/aop/spring-aop.xsd">
+					 ...
+		</beans>
+		```
+	* ### TransactionInterceptor
 	
-##### 비즈니스 로직을 담당하는 UserService안에 자리잡고 있는 트랜잭션을 담당하는 기술적인 코드를 DI와 인터페이스를 이용해 분리한다.
+		<details markdown="1">
+		<summary><font size="4px" >applicationContext.xml</font></summary>
+		```java
+		<?xml version="1.0" encoding="UTF-8"?>
+		<beans xmlns="http://www.springframework.org/schema/beans"
+					 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:aop="http://www.springframework.org/schema/aop"
+					 xsi:schemaLocation="http://www.springframework.org/schema/beans
+					 http://www.springframework.org/schema/beans/spring-beans.xsd http://www.springframework.org/schema/aop https://www.springframework.org/schema/aop/spring-aop.xsd">
+				...
+				
+				<bean class="org.springframework.aop.framework.autoproxy.DefaultAdvisorAutoProxyCreator"/>
+
+
+				<bean id="userService" class="ex.spring.user.service.UserServiceImpl">
+						<property name="mailSender" ref="mailSender"/>
+						<property name="userDao" ref="userDao"/>
+				</bean>
+
+				<bean id="transactionAdvice" class="org.springframework.transaction.interceptor.TransactionInterceptor">
+						<property name="transactionManager" ref="transactionManager"/>
+						<property name="transactionAttributes">
+								<props>
+										<prop key="get*">PROPAGATION_REQUIRED,readOnly,timeout_30</prop>
+										<prop key="upgrade*">PROPAGATION_REQUIRES_NEW,ISOLATION_SERIALIZABLE</prop>
+										<prop key="**">PROPAGATION_REQUIRED</prop>
+								</props>
+						</property>
+				</bean>
+
+				<aop:config>
+						<aop:pointcut id="transactionPointcut" expression="execution(* *..*ServiceImpl.upgrade*(..))"/>
+						<aop:advisor advice-ref="transactionAdvice" pointcut-ref="transactionPointcut"/>
+				</aop:config>
+
+				...
+		</beans>		
+		```	
+		</details>
+##### 트랜잭션 경계 설정 코드를 보면 트랜잭션을 가져올때 파라미터로 new DefaultTransactionDefinition를 넘겨주게 된다. DefaultTransactionDefinition이 구현하고 있는 TransactionDefinition 인터페이스는 트랜잭션의 동작방식에 영향을 줄 수 있는 네 가지 속성을 정의하고 있다.
+##### 트랜잭션 전파 : 트랜잭션의 경계에서 이미 진행중인 트랜잭션이 있을 때 또는 없을 때 어떻게 동작할 것인가를 결정하는 방식.
+```
+PROPAGATION_REQUIRED : 진행 중인 트랜잭션이 없으면 새로 시작하고, 이미 시작된 트랜잭션이 있으면 이에 참여한다. DefaultTransactionDefinition의 트랜잭션 전파 속성.
+PROPAGATION_REQUIRES_NEW : 항상 새로운 트랜잭션을 시작한다.
+PROPAGATION_NOT_SUPPORTED : 트랜잭션 없이 동작하도록 한다. 진행 중인 트랜잭션이 있어도 무시한다.
+```
+##### 격리 수준 : 서버환경에서는 여러개의 트랜잭션이 동시에 진행될 수 있기 때문에 모든 DB 트랜잭션은 격리수준을 갖고 있어야 한다. DefaultTransactionDefinition에 설정된 격리수준은 ISOLATION_DEFAULT로 DataSource에 설정되어 있는 디폴트 격리수준을 그대로 따른다는 뜻이다.
+##### 제한시간 : 트랜잭션을 수행하는 제한시간을 설정할 수 있다. DefaultTransactionDefinition의 기본 설정은 제한시간이 없는 것이다.
+##### 읽기전용 : 읽기전용 설정시 트랜잭션 내에서 데이터를 조작하는 시도를 막아준다. 데이터 엑세스 기술에 따라서 성능이 향상될 수도 있다.
+##### 스프링에서는 편리하게 트랜잭션 경계설정 어드바이스로 사용할 수 있도록 만들어진 TransactionInterceptor가 존재한다. 이를 이용하면 기존의 TransactionAdvice와 TransactionHandler처럼 새로운 클래스를 만들지 않아도 설정파일을 이용해 쉽게 빈으로 만들수가 있다.
+	* ### tx 네임스페이스 적용
+	
+		<details markdown="1">
+		<summary><font size="4px" >applicationContext.xml</font></summary>
+		```xml
+		<?xml version="1.0" encoding="UTF-8"?>
+		<beans xmlns="http://www.springframework.org/schema/beans"
+					 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:aop="http://www.springframework.org/schema/aop"
+					 xmlns:tx="http://www.springframework.org/schema/tx"
+					 xsi:schemaLocation="http://www.springframework.org/schema/beans
+					 http://www.springframework.org/schema/beans/spring-beans.xsd 
+					 http://www.springframework.org/schema/aop 
+					 https://www.springframework.org/schema/aop/spring-aop.xsd 
+					 http://www.springframework.org/schema/tx 
+					 http://www.springframework.org/schema/tx/spring-tx.xsd">
+				...
+
+				<bean class="org.springframework.aop.framework.autoproxy.DefaultAdvisorAutoProxyCreator"/>
+				
+
+				<bean id="userService" class="ex.spring.user.service.UserServiceImpl">
+						<property name="mailSender" ref="mailSender"/>
+						<property name="userDao" ref="userDao"/>
+				</bean>
+
+				<tx:advice id="transactionAdvice" transaction-manager="transactionManager">
+						<tx:attributes>
+								<tx:method name="get*" propagation="REQUIRED" read-only="true" timeout="30"/>
+								<tx:method name="upgrade*" propagation="REQUIRES_NEW" isolation="SERIALIZABLE"/>
+								<tx:method name="*" propagation="REQUIRED"/>
+						</tx:attributes>
+				</tx:advice>
+
+				<aop:config>
+						<aop:pointcut id="transactionPointcut" expression="execution(* *..*ServiceImpl.upgrade*(..))"/>
+						<aop:advisor advice-ref="transactionAdvice" pointcut-ref="transactionPointcut"/>
+				</aop:config>
+
+				...
+		</beans>		
+		```	
+		</details>
+##### 아래의 tx 네임스페이스 선언을 설정파일에 추가한다.
+		```xml
+		<beans ...
+					 xmlns:tx="http://www.springframework.org/schema/tx"
+					 xsi:schemaLocation="...
+							 http://www.springframework.org/schema/tx 
+							 http://www.springframework.org/schema/tx/spring-tx.xsd">
+					 ...
+		</beans>			 
+		```
+##### tx 네임스페이스를 이용하면 XML 에디터의 자동완성 기능을 통해 편하게 작성할 수 있다.		
+	* ### 트랜잭션 애노테이션
+		<details markdown="1">
+		<summary><font size="4px" >UserService.java</font></summary>
+		```java
+		@Transactional
+		public interface UserService {
+				void add(User user);
+				void deleteAll();
+				void update(User user);
+				void upgradeLevels();
+				@Transactional(readOnly = true)
+				User get(String id);
+
+				@Transactional(readOnly = true)
+				List<User> getAll();
+		}
+		```	
+		</details>
+		
+		<details markdown="1">
+		<summary><font size="4px" >applicationContext.xml</font></summary>
+		```xml
+		<?xml version="1.0" encoding="UTF-8"?>
+		<beans xmlns="http://www.springframework.org/schema/beans"
+					 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+					 xmlns:tx="http://www.springframework.org/schema/tx"
+					 xsi:schemaLocation="http://www.springframework.org/schema/beans
+					 http://www.springframework.org/schema/beans/spring-beans.xsd   
+					 http://www.springframework.org/schema/tx http://www.springframework.org/schema/tx/spring-tx.xsd">
+				...
+				
+				<tx:annotation-driven transaction-manager="transactionManager"/>
+
+				<bean id="userService" class="ex.spring.user.service.UserServiceImpl">
+						<property name="mailSender" ref="mailSender"/>
+						<property name="userDao" ref="userDao"/>
+				</bean>
+
+				...
+		</beans>		
+		```	
+		</details>
+##### `<tx:annotation-driven transaction-manager="transactionManager"/>`를 설정파일에 추가한다.
+##### 스프링은 @Transactional을 적용할때 4단계의 대체 정책을 이용하게 해준다. 메소드 속성을 확일할 때 타깃 메소드, 타깃 클래스, 선언 메소드, 선언 타입의 순서에 따라서 @Transactional이 적용 되었는지 차례로 확인하고, 가장 먼저 발견되는 속성정보를 사용한다.
 
 > ###### [토비의 스프링 3.1]
 
