--- a/_posts/spring/2020-02-11-aop.md
+++ b/_posts/spring/2020-02-11-aop.md
@@ -16,7 +16,7 @@ categories: Spring
 * ### AOP 란
 ##### 애스펙트란 그 자체로 애플리케이션의 핵심기능을 감고 있지는 않지만, 애플리케이션을 구성하는 중요한 한 가지 요소이고, 핵심기느에 부가되어 의미를 갖는 특별한 모듈을 가리킨다.
 ##### 애스펙트는 부가될 기능을 정의한 어디바이스와, 어드바이스를 어디에 적용할지를 결정하는 포인트컷을 함께 갖고 있다.
-##### AOP는 핵심기능 코드 사이에 침투한 부가기능을 독릭적인 모듈로 분ㄹ리함으로써 핵심기능을 설계하고 구현할 때 객체지향적인 가치를 지킬 수 있도록 도와주는 것이라고 보면 된다. 
+##### AOP는 핵심기능 코드 사이에 침투한 부가기능을 독릭적인 모듈로 분리함으로써 핵심기능을 설계하고 구현할 때 객체지향적인 가치를 지킬 수 있도록 도와주는 것이라고 보면 된다. 
 ##### AOP는 결국 애플리케이션을 다양한 측면에서 독립적으로 모델링하고, 설계하고, 개발할 수 있도록 만들어 애플리케이션을 다양한 관점에서 바라보며 개발할 수 있게 도와준다.
 * ### AOP의 용어
 ###### 타깃 : 부가기능을 부여할 대상. 핵심기능을 담은 클래스 or 다른 부가기능을 제공하는 프록시 오브젝트.
@@ -25,7 +25,7 @@ categories: Spring
 ###### 포인트컷 : 어드바이스를 적용할 조인 포인트를 선별하는 작업 또는 그 기능을 정의한 모듈을 말한다.
 ###### 프록시 : 클라이언트와 타깃 사이에 투명하게 존재하면서 부가기능을 제공하는 오브젝트. DI를 통해 타깃 대신 클라이언트에게 주입되며, 클라이언트의 메소드 호출을 대신 받아서 타깃에 위임해주면면서, 그 과정에서 부가기능을 부여. 스프링은 프록시를 이용해 AOP를 지원.
 ###### 어드바이저 : 포인트컷과 어드바이스를 하나씩 갖고 있는 오브젝트. 어떤 부가기능(어드바이스)을 어디(포인트컷)에 전달할 것인가를 알고 있는 AOP의 가장 기본이 되는 모듈.
-###### 애스펙트 : OOP의 클래스와 마찬가지로 애스펙트는 AOP의 기본 뮤듈. 한 개 또는 그 이상의 포인트컷과 어드비아스의 조합으로 만들어지며 보통 싱글톤 형태의 오브젝트로 존재.
+###### 애스펙트 : OOP의 클래스와 마찬가지로 애스펙트는 AOP의 기본 모듈. 한 개 또는 그 이상의 포인트컷과 어드비아스의 조합으로 만들어지며 보통 싱글톤 형태의 오브젝트로 존재.
 * ### AOP 적용
 	<details markdown="1">
 	<summary><font size="4px" >UserService.java</font></summary>
