--- a/_posts/spring/2020-03-24-jdbc_ex.md
+++ b/_posts/spring/2020-03-24-jdbc_ex.md
@@ -191,8 +191,8 @@ categories: Spring
 		<summary><font size="4px" >UserDao.java</font></summary>
 		```java
 		public interface UserDao {
-				void insert(User user) throws ClassNotFoundException, SQLException;
-				User get(String id) throws SQLException, ClassNotFoundException;
+				void insert(User user);
+				User get(String id);
 				...
 		}	
 		```
